Fixed height issue on mobile devices

--- a/assets/sass/templates/_company.scss
+++ b/assets/sass/templates/_company.scss
@@ -1,5 +1,5 @@
 .section--top_banner_v2 {
-	height: 450px;
+	min-height: 450px;
 
 	background-image:    url("/assets/images/v2/top-banner-bg.jpg");
 	background-size:     cover;
